# OpenGL_Learning

./: .gitignore  .gitmodules  README.md
Ch2/: main.cpp  (+1 more)
Ch4/4_1_basic/: 4.1.Basic.cpp  CMakeLists.txt
Ch4/4_2_shader/: 4.2.Shader.cpp  CMakeLists.txt
Ch4/4_2_shader2/: 4.2.Shader.cpp  CMakeLists.txt
Ch5/5-1 Single_Triangle_RGB/: CMakeLists.txt
Ch5/5-1 Single_Triangle_RGB/Source/: CMakeLists.txt  main.cpp
LearnOpenGL/: CMakeLists.txt  imgui.ini
LearnOpenGL/shader/8.1.Colors/: lighting.fs
LearnOpenGL/shader/8.2.Basic_Lighting/: light_cube.vs  lighting.fs  lighting.vs
LearnOpenGL/shader/8.3.Materials/: lighting.fs  lighting.vs
LearnOpenGL/shader/8.4.Lighting_maps/: lighting.fs
LearnOpenGL/shader/8.5.Lighting_casters/: lighting.fs
LearnOpenGL/shader/8.6.Multiple_lights/: lighting.fs  lighting.vs
LearnOpenGL/src/1.getting_started/: CMakeLists.txt
LearnOpenGL/src/1.getting_started/1.1.hello_window/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/2.1.hello_triangle/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/2.2.hello_triangle_indexed/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/2.3.lab1/: CMakeLists.txt  VertexArray.cpp  VertexArray.h  a.frag  a.vert  buffer.cpp  buffer.h  main.cpp  shader.cpp  shader.h
LearnOpenGL/src/1.getting_started/3.1.shader_uniform/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/3.3.lab1/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/3.4.lab2/: CMakeLists.txt  VertexArray.cpp  VertexArray.h  a.fs  a.vs  main.cpp  shader.cpp  shader.h
LearnOpenGL/src/1.getting_started/4.1.texture/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/4.2.texture_combined/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/4.3.lab1/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/4.4.lab2/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/5.1.transformations/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/5.2.lab1/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/5.3.lab2/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/6.1.coordinate_systems/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/6.2.cube/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/6.3.cube_depth/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/6.4.multiple_cube/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/6.5.lab1/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/7.1.camera_circle/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/7.2.camera_move/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/7.3.camera_rotate/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/7.4.lab_1/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/7.4.lab_lookat/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/7.5.lab_camera_class/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/8.1.Colors/: CMakeLists.txt  Texture.cpp  Texture.h  buffer.cpp  colorFragment.fs  main.cpp  player.h  shader.cpp
LearnOpenGL/src/1.getting_started/8.2.Basic_Lighting/: CMakeLists.txt  buffer.cpp  main.cpp  shader.h  vertices.h
LearnOpenGL/src/1.getting_started/8.3.Materials/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/8.4.Lighting_maps/: CMakeLists.txt  Texture2D.cpp  Texture2D.h  VertexArray.h  main.cpp
LearnOpenGL/src/1.getting_started/8.5.Light_casters/: CMakeLists.txt  main.cpp
LearnOpenGL/src/1.getting_started/8.6.Multiple_lights/: CMakeLists.txt  fragmentShader.fs  main.cpp  vertices.h
LearnOpenGL/src/2.lighting/: CMakeLists.txt
LearnOpenGL/src/2.lighting/1.colors/: CMakeLists.txt  lighting.glsl  main.cpp
LearnOpenGL/src/2.lighting/2.1.basic_lighting_diffuse/: CMakeLists.txt  lightcube.glsl  lighting.glsl  main.cpp
LearnOpenGL/src/2.lighting/2.2.basic_lighting_specular/: CMakeLists.txt  main.cpp
LearnOpenGL/src/2.lighting/2.3.calculate_phong_in_view_space/: CMakeLists.txt  main.cpp  phong.glsl
LearnOpenGL/src/2.lighting/2.4.gouraud/: CMakeLists.txt  gouraud.glsl  main.cpp  phong.glsl
LearnOpenGL/src/2.lighting/2.basic_lighting/: CMakeLists.txt  main.cpp
LearnOpenGL/src/2.lighting/3.1.material/: CMakeLists.txt  main.cpp
LearnOpenGL/src/2.lighting/3.2.material_exercise/: CMakeLists.txt  main.cpp
LearnOpenGL/src/2.lighting/4.1.light_map_diffuse_map/: CMakeLists.txt  main.cpp
LearnOpenGL/src/2.lighting/4.2.light_map_specular_map/: CMakeLists.txt  main.cpp
LearnOpenGL/src/2.lighting/4.3.light_map_exercise/: CMakeLists.txt  main.cpp
LearnOpenGL/src/2.lighting/5.1.light_caster_directional/: CMakeLists.txt  main.cpp  phong.glsl  phong_emission_map.glsl
LearnOpenGL/src/2.lighting/5.2.light_caster_point/: CMakeLists.txt  main.cpp  phong_diffuse_map.glsl
LearnOpenGL/src/3.model_loading/: CMakeLists.txt
LearnOpenGL/src/common/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.h  Debug.cpp  Debug.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.h  Player.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  cube_vertices_normal.h  cube_vertices_normal_tex.h  sphere_vertices_normal.h
VictorTutorial/src/: CMakeLists.txt
VictorTutorial/src/ep_1_window/: CMakeLists.txt
VictorTutorial/src/ep_2_triangle/: CMakeLists.txt  main.cpp
VictorTutorial/src/ep_3_index_buffer/: CMakeLists.txt  main.cpp
VictorTutorial/src/ep_4_organize/: CMakeLists.txt  IndexBuffer.cpp  Utils.cpp  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  default.frag  main.cpp
VictorTutorial/src/ep_5_shaders/: CMakeLists.txt  Ref.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  default.vert  main.cpp
VictorTutorial/src/ep_6_textures/: CMakeLists.txt  IndexBuffer.h  Shader.cpp  Texture.cpp  Texture.h  Utils.cpp  Utils.h  default.frag  default.vert  main.cpp
book/Ch2/2_1/: CMakeLists.txt
book/Ch2/2_1/Assets/: robotX.mtl
book/Ch2/Lab/: CMakeLists.txt
book/Ch4/4_1_basic/: 4.1.Basic.cpp  CMakeLists.txt
book/Ch8/8.1/: CMakeLists.txt
(+131 files in other folders)
