cmake_minimum_required(VERSION 3.10)

project(1.getting_started)

add_subdirectory(1.1.hello_window)

add_subdirectory(2.1.hello_triangle)
add_subdirectory(2.2.hello_triangle_indexed)
add_subdirectory(2.3.lab1)
add_subdirectory(3.1.shader_uniform)

add_subdirectory(3.3.lab1)
add_subdirectory(3.4.lab2)

add_subdirectory(4.1.texture)
add_subdirectory(4.2.texture_combined)
add_subdirectory(4.3.lab1)
add_subdirectory(4.4.lab2)

add_subdirectory(5.1.transformations)
add_subdirectory(5.2.lab1)
add_subdirectory(5.3.lab2)

add_subdirectory(6.1.coordinate_systems)
add_subdirectory(6.2.cube)
add_subdirectory(6.3.cube_depth)
add_subdirectory(6.4.multiple_cube)
add_subdirectory(6.5.lab1)