cmake_minimum_required(VERSION 3.10)

project(2.lighting)

add_subdirectory(1.colors)
add_subdirectory(2.1.basic_lighting_diffuse)
add_subdirectory(2.2.basic_lighting_specular)
add_subdirectory(2.3.calculate_phong_in_view_space)
add_subdirectory(2.4.gouraud)
add_subdirectory(3.1.material)
add_subdirectory(3.2.material_exercise)
add_subdirectory(4.1.light_map_diffuse_map)
add_subdirectory(4.2.light_map_specular_map)